[package]
name = "galeri"
version = "0.1.0"
description = "A perpetual artwork streaming app"
authors = ["Micheal Parks"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
auto-launch = "0.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.17", features = ["json", "blocking", "gzip"] }
serde_json = "1.0.96"
serde = { version = "1.0.162", features = ["derive"] }
tauri = { version = "1.3.0", features = ["fs-copy-file", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-remove-dir", "fs-remove-file", "fs-write-file", "http-request", "os-all", "path-all", "system-tray", "updater", "window-center", "window-create", "window-set-focus", "window-set-position", "window-set-resizable", "window-set-title", "window-show"] }
tokio = { version = "1.28.0", features = ["full"] }
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }
wallpaper = "3.2.0"
webbrowser = "0.8.9"
fs2 = "0.4.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true  # Automatically strip symbols from the binary.
